<resources>
    <string name="app_name">Транспорт</string>
    <string name="authorization">Авторизация</string>
    <string name="scan_qr_code">Сканировать QR код</string>
    <string name="front">Впереди</string>
    <string name="you">Вы</string>
    <string name="back">Сзади</string>
    <string name="valid_until_1">Действителен до</string>
    <string name="valid_until_2">Дейстивтельно до</string>
    <string name="route">Маршрут</string>
    <string name="map">Карта</string>
    <string name="profile">Профиль</string>
    <string name="finish_route">Завершить маршрут</string>
    <string name="dtp">ДТП</string>
    <string name="on_schedule">По графику</string>
    <string name="crash">Поломка</string>
    <string name="for_health">По состоянию здоровья</string>
    <string name="another">Другая</string>
    <string name="prices_nearby">Цены рядом от %1$s \u20BD</string>
    <string name="route_number">Маршрут №%1$s</string>
    <string name="send_situation">Отправить ситуацию</string>
    <string name="GAI">ГАИ</string>
    <string name="check">Проверка</string>
    <string name="send_message">Отправить сообщение</string>
    <string name="finish">Завершение</string>
    <string name="proceed">Продолжить</string>
    <string name="notifications">Уведомления</string>
    <string name="my_profile">Мой профиль</string>
    <string name="route_history">История выходов на маршруты</string>
    <string name="load_next">Загрузить ещё</string>
    <string name="time_interval">%1$s – %2$s</string>
    <string name="full_name">ФИО</string>
    <string name="birthday">Дата рождения</string>
    <string name="driver_license">Водительское удостоверение</string>
    <string name="passport">Паспорт</string>
    <string name="passport_is_valid">Действителен до %1$s</string>
    <string name="license_is_valid">Действительно до %1$s</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="cancel">Отмена</string>
    <string name="send">Отправить</string>
    <string name="no_trips">Нет рейсов</string>
    <string name="trips_time">Время рейсов</string>
    <string name="notification_description">Позиция автобуса отправляется</string>
    <string name="notification_channel_name" >Канал трансорта</string>
    <string name="scan_qr_code_to_enter">Отсканируйте QR код, чтобы войти в приложение</string>
</resources>
