<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/iRoute"
        android:icon="@drawable/ic_tab_1"
        android:title="@string/route"
        app:showAsAction="always"/>

    <item
        android:id="@+id/iMap"
        android:icon="@drawable/ic_tab_2"
        android:title="@string/map"
        app:showAsAction="always"/>


    <item
        android:id="@+id/iNotifications"
        android:icon="@drawable/ic_tab_3"
        android:title="@string/notifications"
        app:showAsAction="always"/>

    <item
        android:id="@+id/iProfile"
        android:icon="@drawable/ic_tab_4"
        android:title="@string/profile"
        app:showAsAction="always"/>

</menu>