<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/finish_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorGray"/>

    <LinearLayout
        android:id="@+id/llOnSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_beenhere"
            app:tint="@color/colorGray"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/on_schedule"
            android:textColor="@color/colorOnSurface"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBorder"/>
    <LinearLayout
    android:id="@+id/llAccident"
    android:background="?attr/selectableItemBackground"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="20dp"
    android:paddingBottom="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="24dp"
        android:layout_height="24dp"

        app:srcCompat="@drawable/ic_info"
        app:tint="@color/colorGray"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/dtp"
        android:textColor="@color/colorOnSurface"
        android:textSize="16sp"
        android:layout_marginStart="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
    <LinearLayout
        android:id="@+id/llCrash"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"

            app:srcCompat="@drawable/ic_crash"
            app:tint="@color/colorGray"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/crash"
            android:textColor="@color/colorOnSurface"
            android:textSize="16sp"
            android:layout_marginStart="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llForHealth"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_medic"
            app:tint="@color/colorGray"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/for_health"
            android:textColor="@color/colorOnSurface"
            android:textSize="16sp"
            android:layout_marginStart="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAnother"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_another"
            app:tint="@color/colorGray"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/another"
            android:textColor="@color/colorOnSurface"
            android:textSize="16sp"
            android:layout_marginStart="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>