<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/etMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AlertEditTextTheme"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:hint="@string/enter_message" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCancel"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:padding="5dp"
            android:background="?selectableItemBackground"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/colorOnSurface"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/tvSend" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSend"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="5dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:text="@string/send"
            android:textAllCaps="true"
            android:textColor="@color/colorOnSurface"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>