<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".screens.authorization.AuthorizationActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStartTextLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.18"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEndTextLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.82"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTopLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/authorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorOnPrimary"/>

    <androidx.appcompat.widget.AppCompatImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ivMenu"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackground"
        app:srcCompat="@drawable/ic_menu"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        app:layout_constraintTop_toTopOf="@id/glTopLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/ic_qr_code"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogoText"
        android:text="@string/scan_qr_code_to_enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        android:gravity="center"
        android:textSize="16sp"
        app:lineHeight="24dp"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="@id/glStartTextLogo"
        app:layout_constraintEnd_toEndOf="@id/glEndTextLogo"
        app:layout_constraintBottom_toTopOf="@id/btnScanQr"
        android:textColor="@color/colorOnPrimary"/>

    <com.google.android.material.button.MaterialButton
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="72dp"
        android:id="@+id/btnScanQr"
        app:layout_constraintVertical_bias="0.8"
        app:icon="@drawable/ic_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_code"
        android:textAllCaps="false"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/AppTheme.ButtonWithIconAndText"/>

</androidx.constraintlayout.widget.ConstraintLayout>